# Rust_projects

./: .gitignore  README.md
03-soccer-meet-youtube/: .env.example  Makefile  README.md
03-soccer-meet-youtube/src/: main.rs
03-soccer-meet-youtube/src/models/: game.rs
03-soccer-meet-youtube/src/routes/: config.rs  game.rs  health_route.rs
03-soccer-meet-youtube/utils/: Rust Actix-web CRUD.postman_collection.json
05-algorithms-data-structure/: README.md
05-algorithms-data-structure/01-linear_search/src/: main.rs
06-chatbot-rust/: Cargo.toml
06-chatbot-rust/src/: main.rs
07-zkp/: Cargo.toml  README.md
07-zkp/src/: qap.rs  r1cs.rs
08-tonic-grpc/server/: Cargo.toml
09-tokio-example/: Cargo.toml  README.md
09-tokio-example/src/: main.rs
10-NLP-CUDA/: Cargo.toml  README.md
10-NLP-CUDA/src/: main.rs
10-nlp-cuda/src/: main.rs
11-slim-docker/: Cargo.toml  Dockerfile  README.md
11-slim-docker/src/: main.rs
12-crud-app/: Cargo.toml  README.md
12-crud-app/docker/: docker-compose.yml  init.sql
12-crud-app/src/: controller.rs  main.rs  model.rs  user_service.rs
13-graphql-rust/: Cargo.toml  README.md
13-graphql-rust/src/: db.rs  main.rs  user_service.rs
14-singleton/: README.md
14-singleton/src/: lib.rs
15-kafka-project/: Cargo.toml  README.md  docker-compose.yml
15-kafka-project/src/: consumer.rs  main.rs  producer.rs
17-rabbitmq-rust/: Cargo.toml  README.md
17-rabbitmq-rust/src/: main.rs
18-clean-architecture-ddd/: .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yml
18-clean-architecture-ddd/src/: main.rs
19-LLM-Projects/: Cargo.toml  README.md
19-LLM-Projects/src/: main.rs
20-axum/: README.md  docker-compose.yml
20-axum/database/: init.sql
20-axum/lessons/: Rust Axum Projects.postman_collection.json
20-axum/lessons/data/: .env.example  (+1 more)
20-axum/lessons/routing/: Cargo.toml  Rust Axum Projects.postman_collection.json
20-axum/lessons/routing/src/: lib.rs
20-axum/lessons/routing/src/routes/: custom_json_extractor.rs  get_json.rs  mirror_body_json.rs  mirror_user_agent.rs  mod.rs  query_params.rs  returns_201.rs  set_middleware_custom_header.rs
20-axum/project_solution/: .env.example  Cargo.toml
20-axum/project_solution/src/: lib.rs  main.rs  router.rs
20-axum/project_solution/src/database/: prelude.rs  tasks.rs  users.rs
20-axum/project_solution/src/middleware/: require_authentication.rs
20-axum/project_solution/src/queries/: mod.rs  task_queries.rs  user_queries.rs
20-axum/project_solution/src/routes/tasks/: create_task.rs  create_task_extractor.rs  delete_task.rs  get_all_tasks.rs  get_one_task.rs  mod.rs  update_tasks.rs
20-axum/project_solution/src/routes/users/: create_user.rs  login.rs  logout.rs  mod.rs
20-axum/project_solution/src/utilities/: hash.rs  jwt.rs
21-LLM-Ollama/: README.md
21-Number-Theoretic-Transform/: Cargo.toml  SOLUTION.MD
21-Number-Theoretic-Transform/benches/: ntt.rs
21-Number-Theoretic-Transform/src/: lib.rs  main.rs
22-LLM-Ollama-Embedding-service/: Cargo.toml  README.md
22-LLM-Ollama-Embedding-service/src/: circuit_breaker.rs  main.rs  model.rs  ollama_client.rs  retry_util.rs
23-LLM-AI-Agents/: README.md  agent.py
24-LLM-AI-Tools/: .gitignore  Cargo.toml  README.md
24-LLM-AI-Tools/src/: main.rs
25-LLM-Qdrant-VectorDB/: Cargo.toml  README.md
25-LLM-Qdrant-VectorDB/src/: main.rs
26-LLM-AI-Agent-SQL-Queries/: .env  .env.example  Cargo.toml  README.md
26-LLM-AI-Agent-SQL-Queries/src/: main.rs  text_to_sql_chain.rs
27-LLM-Stocks-Agent/: .gitignore  Cargo.toml  README.md
27-LLM-Stocks-Agent/src/: main.rs
28-MCP-server/: Cargo.toml  README.md
28-MCP-server/src/: main.rs
29-LLM-Multi-Model/: Cargo.toml  README.md
29-LLM-Multi-Model/src/: main.rs
30-AI-Agent-Hugging-Face/: .env.development  Cargo.toml  README.md
30-AI-Agent-Hugging-Face/src/: main.rs
31-RustSecureAPI/: .env.development  Cargo.toml  README.md
31-RustSecureAPI/src/: auth.rs  db.rs  dtos.rs  error.rs  main.rs  models.rs
32-AI-Multi-Agent/: .env.example  Cargo.toml  README.md  slides.md
32-AI-Multi-Agent/bb_ollama/: Cargo.toml  READM.md
32-AI-Multi-Agent/db/: Cargo.toml
32-AI-Multi-Agent/postman/: Rust.postman_collection.json
32-AI-Multi-Agent/src/: ai.rs  commands.rs  lib.rs  main.rs  tools.rs
34-tauri-llm-playground/: README.md
34-tauri-llm-playground/backend/: Cargo.toml  tauri.conf.json
34-tauri-llm-playground/llm-playground-backend/: Cargo.toml  tauri.conf.json
34-tauri-llm-playground/llm-playground-backend/src/: lib.rs  main.rs
34-tauri-llm-playground/llm-playground-frontend/: package.json
35-tauri-IOS/: .gitignore  README.md
35-tauri-IOS/ios-demo/: package.json
36-tauri-android-example/: README.md
37_TCP_Rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh  run_client.sh  run_linux_version.sh  run_server.sh
37_TCP_Rust/src/: lib.rs  main.rs  tcp.rs
38-git-clone/: Cargo.toml  README.md
38-git-clone/src/: cat_file.rs  hash_object.rs  init.rs  lib.rs  main.rs
39-docker/: README.md  installing_docker.md  list_docker_images.md  pull_docker_image.md  running_your_first_container.md
40-to-do/: .gitignore  README.md
40-to-do/pages/: index.js
40-to-do/rust/: .gitignore
6-chatbot-rust/: .env  Cargo.toml  README.md  package-lock.json
6-chatbot-rust/style/: output.css
7-zkp/src/: circuit.rs  r1cs.rs
8-tonic-grpc/: README.md
8-tonic-grpc/server/: Cargo.toml  build.rs
(+86 files in other folders)
