[package]
name = "resilient-embedding-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"]}
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
