[package]
name = "LLM-AI-Tools"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.2.4", features = ["tool-implementations", "macros", "ollama-rs-macros"] }
reqwest = "0.12.12"
schemars = { version = "0.8.21", features = ["preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
