[package]
name = "LLM-AI-Agent-SQL-Queries"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.86"
ollama-rs = "0.2.5"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-async-std", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
