[package]
name = "LLM-Stocks-Agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.2.6", features = ["tool-implementations"] }
ollama-rs-macros = "0.2.6"
reqwest = "0.12.12"
schemars = "0.8.22"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
dotenv = "0.15.0"