[package]
name = "gRPC_calculator_tonic"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
prost = "0.12.3"
tonic-reflection = "0.11"
tonic-web = "0.11"
tower-http = { version = "0.4", features = ["cors"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
