[package]
name = "project_solution"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6.1", features = ["macros"] }
bcrypt = "0.13.0"
chrono = "0.4.23"
dotenvy = "0.15.6"
jsonwebtoken = "8.2.0"
sea-orm = { version = "0.10.5", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
