[package]
name = "llm-playground-backend"
version = "0.1.0"
description = "A tauri App"
authors = ["The Punisher"]
license = "MIT"
edition = "2024"

[lib]
name = "llm_playground_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.47.1"
futures-util = "0.3.31"
ollama-rs = { version = "0.3.2", features = ["stream"] }
