[package]
name = "routing"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
axum-extra = { version = "0.10.0", features = ["typed-header"]}
